Added details screen

--- a/templates/mainWindow.html
+++ b/templates/mainWindow.html
@@ -45,12 +45,41 @@
                 </tr>
             </table>
         </div>
+        <div id="instruction" class="instruction">
+            <div class="box">
+                <div class="close-button-container">
+                    <button id="close-button">X</button>
+                </div>
+                <div style="text-align:center; color: #D50032; font-size: 15px;">
+                    Download Link:
+                </div>
+                <div style="text-align:center; padding-top: 10px; font-size: 18px;">
+                    <a href="somewhere">DEB190123-Azure-03102019</a>
+                </div>
+                <div style="text-align:center; color: #D50032; font-size: 15px; padding-top: 20px;">
+                    SHA256: 895ccb560ca4e94162e5effe1af15562a2a93c2add3dcecd138b226c458cfcc0
+                </div>
+                <div style="text-align:center; color: #D50032; font-size: 15px; padding-top: 5px">
+                    SHA1: 6a0c27c73f4f945e17d2323d630e82199e87e968
+                </div>
+                <div style="text-align:center; color: #D50032; font-size: 15px; padding-top: 5px;">
+                    MD5: ef113ecc2bd4c77e2f3cb79822dcfee1
+                </div>
+                <div style="padding-top: 100px; text-align: center; color: #D50032;">
+                    Having trouble firing up Debian on Azure?
+                </div>
+                <div style="text-align: center; padding-top:10px;">
+                    Please visit our <a href="somewhere" style="color:#D50032;">official azure guide</a> to know how to install the image with the Azure wizard.
+                    <br>
+                    To install the wizard using azurecli, visit our <a href="somewhere" style="color:#D50032;">Git Repository</a> which elaborates on the peocedure of installing the Debian image on Azure using the CLI client.
+                </div>
+            </div>
+        </div>
         <div class="footer">
             <img class="deb-logo" src="../static/assets/footer-logo.png" alt="Debian Logo">
             <div style="padding-left: 30px; padding-top: 10px;">
                 <div style="color: #D50032; padding: 2px;">Brought to you by Debian</div>
                 <div style="color: #D50032; width: 100%; text-align: center;">Visit us at <a href="https://www.debian.org/">debian.org</a></div>
-            <div></div>
         </div>
     </div>
     <script async src="../static/main.js"></script>
