--- a/static/styles.css
+++ b/static/styles.css
@@ -109,6 +109,43 @@ table#image-table td {
     height: 23px;
 }
 
+.instruction {
+    display: none;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.box {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    max-width: 800px;
+    max-height: 400px;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 3px;
+    border: solid 1px #D50032;
+    display: flex;
+    flex-direction: column;
+}
+
+.close-button-container {
+    padding: 10px;
+}
+
+#close-button {
+    color: #D50032;
+    float: right;
+}
+
 .footer {
     position: absolute;;
     bottom:0;
