REDESIGN: Used Vue.js to diaplsy dynamic contents

--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -15,11 +15,11 @@
         <div class="top-bar" style="display: flex; height: 45px; padding: 15px; background-color: black;">
             <img src="../assets/logo/logo.png" style="height: 100%;">
             <div class="title" style="margin-left: 15px; color: white;">
-                <p style="margin: 0px; font-size: 28px;">Debian</p>
-                <p style="margin: 0px; font-size: 15px;">Cloud Image Finder</p>
+                <div style="margin: 0px; font-size: 28px; line-height: 28px;">Debian</div>
+                <div style="margin: 0px; font-size: 15px; line-height: 25px;">Cloud Image Finder</div>
             </div>
         </div>
-        <div class="about-section-container" style="padding-top: 50px; display: flex; justify-content: center; padding-right: 10px; padding-left: 10px;">
+        <div class="about-section-container" style="padding-top: 10px; display: flex; justify-content: center; padding-right: 10px; padding-left: 10px;">
             <div class="about-section" style="max-width: 800px; width: 100%;">
                 <p style="color: #D50032; font-size: 20px; font-weight: bold;">OBJECTIVE</p>
                 <p style="color: black; font-size: 15px;">
@@ -31,11 +31,11 @@
                 </p>
             </div>
         </div>
-        <div class="search-container" style="padding-top: 100px; display: flex; justify-content: center; height: 35px;padding-left: 10px; padding-right: 10px;">
+        <div class="search-container" style="padding-top: 50px; display: flex; justify-content: center; height: 35px;padding-left: 10px; padding-right: 10px;">
             <input id="search-field" style="max-width: 800px; width: 100%; height: 24px; padding: 0px; border:solid 2px rgb(239, 240, 241); border-radius: 8px; padding:5px; margin-right: 15px;" placeholder="Enter the image details">
             <button id="submit-button" style="margin-left: 5px; height: 35px; margin: 2px; width: 75px; border: 0px;">Submit</button>
         </div>
-        <div id="table-container" style="padding-top: 20px; display: flex; justify-content: center; padding-left: 10px; padding-right: 10px; padding-bottom: 65px;">
+        <div id="table-container" style="padding-top: 20px; display: flex; justify-content: center; padding-left: 10px; padding-right: 10px; padding-bottom: 100px;">
             <table id="image-table" style="max-width: 1000px; width: 100%; border-collapse: collapse; text-align: center; cursor: default; font-size: 15px;">
                 <thead style="color:#D50032; border-bottom: 2px; font-weight: bold; font-family: 'Open Sans Condensed';">
                     <tr>
@@ -54,11 +54,11 @@
                 </tr>
             </table>
         </div>
-        <div class="footer" style="position: absolute; bottom: 0; display:flex; justify-content:center; width: 100%; padding:10px;">
+        <div class="footer" style="position: absolute; bottom: 0; display:flex; justify-content:center; width: 100%; padding:5px;">
             <img src="../assets/logo/footer-logo.png" style="height: 60px;">
             <div style="padding-left:15px; text-align: center;">
-                <p style="margin-bottom:0px;">Brought to you by Debian</p>
-                <p style="margin-top:0px;">Visit us at <a href="https://www.debian.org/" style="color:#D50032">debian.org</a></p>
+                <p style="margin:0px; margin-top:5px;">Brought to you by Debian</p>
+                <p style="margin:0px;">Visit us at <a href="https://www.debian.org/" style="color:#D50032">debian.org</a></p>
             </div>
         </div>
         <div id="img-info-container" style="position:absolute; top:0; left:0; height:100%; width:100%; background-color: rgba(0, 0, 0, 0.75); display: none; align-items: center; justify-content: center;">
