--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@ html, body {
 
 body {
     border: 0px;
-    font-family: 'Times New Roman';
+    font-family: 'Times New Roman', Times, serif;
 }
 
 td {
